RESOLVED FIXED286748
[UIIntelligenceSupport] beckta.com: Siri fails to find text after scrolling to the bottom of the page
https://bugs.webkit.org/show_bug.cgi?id=286748
Summary [UIIntelligenceSupport] beckta.com: Siri fails to find text after scrolling t...
Wenson Hsieh
Reported 2025-01-30 08:05:33 PST
Attachments
Wenson Hsieh
Comment 1 2025-01-30 11:02:48 PST
EWS
Comment 2 2025-01-30 22:00:09 PST
Committed 289594@main (17bb2c1ed768): <https://commits.webkit.org/289594@main> Reviewed commits have been landed. Closing PR #39776 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.