Source/WebCore/page/text-extraction/TextExtraction.cpp
@@ -224,10 +224,18 @@ static inline FloatRect rootViewBounds(Node& node)
     if (UNLIKELY(!view))
         return { };
 
-    if (!node.renderer())
+    CheckedPtr renderer = node.renderer();
+    if (!renderer)
         return { };
 
-    return view->contentsToRootView(node.renderer()->absoluteBoundingBoxRect());
+    IntRect absoluteRect;
+    if (CheckedPtr renderElement = dynamicDowncast<RenderElement>(*renderer); renderElement && renderElement->firstChild())
+        absoluteRect = renderer->pixelSnappedAbsoluteClippedOverflowRect();
+
+    if (absoluteRect.isEmpty())
+        absoluteRect = renderer->absoluteBoundingBoxRect();
+
+    return view->contentsToRootView(absoluteRect);
 }
 
 static inline String labelText(HTMLElement& element)
